<resources>
    <string name="app_name">Kidsloop Android</string>
    <string name="Kidsloop">Kidsloop</string>
    <string name="login_as_student">Login as student</string>
    <string name="login_as_teacher">Login as teacher</string>
    <string name="allow">Allow</string>
    <string name="live_video_stream">Live Video Stream</string>
    <string name="permissions_denied">You have denied access to both camera and microphone</string>
    <string name="camera_permission_denied">You have denied access to camera feed</string>
    <string name="mic_permission_denied">You have denied access to the microphone.</string>
    <string name="camera_is_turned_off">You have turned off your camera.</string>
    <string name="waiting_teacher">Waiting teacher to join</string>
    <string name="setup_your_camera_and_microphone">Setup your camera and microphone</string>
    <string name="math_live_class">Math Live Class</string>

    <string name="permission_rationale_dialog_title">Permissions Needed</string>
    <string name="permission_rationale_dialog_message">We need permissions to camera and microphone in order to use the app.</string>
    <string name="permission_rationale_dialog_positive_button_text">Allow</string>
    <string name="permission_rationale_dialog_negative_button_text">No thanks</string>
    <string name="settings_dialog_title">Permission Needed</string>
    <string name="settings_dialog_message">Give permission manually inside the app\'s settings</string>
    <string name="settings_dialog_positive_button_text">Go to settings</string>
    <string name="settings_dialog_negative_button_text">No thanks</string>
    <string name="set_your_mic_and_video">Set your mic and video</string>
    <string name="join_live_class">Join Live Class</string>
    <string name="my_live_class">My Live Class</string>
    <string name="channel_id">Channel ID</string>
    <string name="turn_off_students_camera">Turn off camera</string>
    <string name="enable_students_camera">Enable camera</string>
    <string name="teacher_turned_off_all_cameras">Your teacher turned off all cameras</string>
    <string name="teacher_turned_off_all_microphones">Your teacher turned off all microphones</string>
    <string name="teacher_turned_off_all_students_cam_and_mic">Your teacher turned off all cameras and microphones</string>
    <string name="wait_for_teacher_to_arrive">Please wait for the teacher to arrive</string>
    <string name="teacher_has_left_the_classroom">The teacher has left the classroom. Please wait for the teacher to arrive.</string>
    <string name="mic_on">Mic on</string>
    <string name="mic_off">Mic off</string>
    <string name="leave_class">Leave Class?</string>
    <string name="leave">Leave</string>
    <string name="go_back">Go back</string>
    <string name="login_as_assistant_teacher">Login as assistant teacher</string>
    <string name="select_language">Select Language</string>
    <string name="select_your_region">Select your Region</string>
    <string name="this_class_will_close_in_5_seconds">This class will close in 5 seconds</string>
    <string name="other_students_number_label">%d other</string>
    <string name="others_students_number_label">%d others</string>
    <string name="welcome_to_kidsloop">Welcome to KidsLoop</string>
    <string name="live_class_no_internet_connection">Oops! It looks like your internet is not connected.</string>
    <string name="query_profiles">
         query profiles {
            myUser {
                profiles {
                ..ProfileFragment
                _typename
                }
                _typename
            }
        }

        fragment ProfileFragment on UserConnectionNode {
        id
        givenName
        familyName
        dateOfBirth
        _typename
        }
    </string>
    <string name="welcome_comma_first_name_of_user">Welcome, %s</string>
    <string name="there_are_no_live_classes_scheduled_please_refresh">There are no Live Classes scheduled.\nPlease refresh!</string>
</resources>