<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/channelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/channel_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintBottom_toTopOf="@id/login_as_student_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_as_student_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/login_as_student"
        app:layout_constraintBottom_toTopOf="@+id/login_as_teacher_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channelID"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/login_as_teacher_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/login_as_teacher"
        app:layout_constraintBottom_toTopOf="@id/login_as_assistant_teacher_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_as_student_btn" />

    <Button
        android:id="@+id/login_as_assistant_teacher_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/login_as_assistant_teacher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_as_teacher_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>
