<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/leave_live_class_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/leave_live_class_overlay"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/space_40"
        android:layout_toStartOf="@id/images_layout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/LeaveSubTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_6"
            android:text="@string/leave" />

        <ImageView
            android:id="@+id/confirm_exit_class_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_round_amaranth_ripple"
            android:src="@drawable/ic_confirm_exit_btn" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/images_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/space_80"
        android:layout_marginBottom="@dimen/space_62"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/LeaveTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_3"
            android:text="@string/leave_class" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_the_owl_is_leaving" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/space_40"
        android:layout_toEndOf="@id/images_layout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/LeaveSubTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_6"
            android:text="@string/go_back" />

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_leave_back_btn"
            android:background="@drawable/bg_round_white_ripple"
            android:contentDescription="@null" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>