<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/class_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/math_live_class"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/setup_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/setup_your_camera_and_microphone"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/viewFinder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/class_title_textview" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/permissions_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/viewFinder"
            app:layout_constraintBottom_toBottomOf="@id/viewFinder"
            app:layout_constraintStart_toStartOf="@id/viewFinder"
            app:layout_constraintEnd_toEndOf="@id/viewFinder"
            android:background="@color/black">
            <TextView
                android:id="@+id/permissions_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@color/black"
                android:gravity="center"
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/camera_is_turned_off"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/allow_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/allow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permissions_textview"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_camera_textview"
            tools:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="180dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/camera_is_turned_off"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/camera_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@drawable/selector_camera"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="@id/viewFinder"
            app:layout_constraintEnd_toStartOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="@id/viewFinder" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginBottom="@dimen/space_30"
            android:max="250"
            android:progressDrawable="@drawable/progressbar"
            app:layout_constraintBottom_toBottomOf="@id/viewFinder"
            app:layout_constraintEnd_toStartOf="@id/microphone_btn"
            app:layout_constraintStart_toEndOf="@id/camera_btn" />

        <ToggleButton
            android:id="@+id/microphone_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@drawable/selector_mic"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="@id/viewFinder"
            app:layout_constraintEnd_toEndOf="@id/viewFinder"
            app:layout_constraintStart_toEndOf="@id/progress_bar" />

        <ToggleButton
            android:id="@+id/join_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@drawable/ic_btn_join"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textOff="@string/join"
            android:textOn=""
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewFinder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>